Added flask info the the first page, still need to work on layout

--- a/templates/home.html
+++ b/templates/home.html
@@ -45,12 +45,12 @@
 
         <!--Summary-->
         <div class="ui container segment">
-            <h2 class="ui header">Summary</h2>
+            <h2 class="ui header">Semantic UI</h2>
             <p>Semantic is a development framework that helps create beautiful, responsive layouts using human-friendly
                 HTML</p>
 
             <h2 class="ui header">Popularity</h2>
-            <p>Seamntic UI is a relatively</p>
+            <p>Semantic UI is not as popular as Bootstrap, and has a larger learning curve.</p>
 
             <h2 class="ui header">Strengths</h2>
             <div class="ui bulleted list">
@@ -93,7 +93,6 @@
                 </div>
             </div>
 
-
             <h2 class="ui header">Weaknesses</h2>
             <div class="ui bulleted list">
                 <div class="item">
@@ -112,11 +111,77 @@
             </div>
 
             <h2 class="ui header">Developers that use Semantic UI</h2>
-
+            <div class="ui bulleted list">
+                <p>Developers who want a full-fledged, tightly-coupled framework, are willing to do some more learning,
+                    and who do not like using bootstrap.</p>
+            </div>
             <h2 class="ui header">Websites that use Semantic UI</h2>
+            <div class="ui bulleted list">
+                <div class="item">
+                    <div class="content">
+                        <p>https://stackshare.io/semantic-ui </p>
+                    </div>
+                </div>
+            </div>
+
+            <h2 class="ui header">Flask</h2>
+            <p>Flask is a micro framework. The aim of the framework is to keep the core simple but extensible. Flask is
+                easy to learn quickly, and is also easy to tweak to the developers needs.</p>
+
+            <h2 class="ui header">Popularity</h2>
+            <p>Flask is very popular currently, even more so than Django which is another python framework.</p>
+
+            <h2 class="ui header">Strengths</h2>
+            <div class="ui bulleted list">
+                <div class="item">
+                    <div class="content">
+                        <div class="header">Extremely flexible</div>
+                    </div>
+                </div>
+                <div class="item">
+                    <div class="content">
+                        <div class="header">Minimalist without sacrificing power</div>
+                    </div>
+                </div>
+                <div class="item">
+                    <div class="content">
+                        <div class="header">Simple to learn and use</div>
+                    </div>
+                </div>
+                <div class="item">
+                    <div class="content">
+                        <div class="header">Routing URLs is easy</div>
+                    </div>
+                </div>
+                <div class="item">
+                    <div class="content">
+                        <div class="header">The Core of the framework is small and easily extensible.</div>
+                    </div>
+                </div>
+            </div>
+
+            <h2 class="ui header">Weaknesses</h2>
+            <div class="ui bulleted list">
+                <div class="item">
+                    <div class="header">Not Async friendly</div>
+                </div>
+                <div class="item">
+                    <div class="header">Limited support and documentation</div>
+                </div>
+                <div class="item">
+                    <div class="header">Lack of database and forms</div>
+                </div>
+                <div class="item">
+                    <div class="header">Truely limited in features</div>
+                </div>
+            </div>
         </div>
 
+        <h2 class="ui header">Types of Developers</h2>
+        <p>Flask is often used in smaller projects that have opted to use python.</p>
 
+        <h2 class="ui header">Types of Websites</h2>
+        <p>http://flask.pocoo.org/community/poweredby/</p>
     </div>
 </body>
 
