changed layout a little

--- a/templates/home.html
+++ b/templates/home.html
@@ -45,14 +45,14 @@
 
         <!--Summary-->
         <div class="ui container segment">
-            <h2 class="ui header">Semantic UI</h2>
+            <h2 class="ui block header">Semantic UI</h2>
             <p>Semantic is a development framework that helps create beautiful, responsive layouts using human-friendly
                 HTML</p>
 
-            <h2 class="ui header">Popularity</h2>
+            <h3 class="ui dividing header">Popularity</h3>
             <p>Semantic UI is not as popular as Bootstrap, and has a larger learning curve.</p>
 
-            <h2 class="ui header">Strengths</h2>
+            <h3 class="ui dividing header">Strengths</h3>
             <div class="ui bulleted list">
                 <div class="item">
                     <div class="content">
@@ -93,7 +93,7 @@
                 </div>
             </div>
 
-            <h2 class="ui header">Weaknesses</h2>
+            <h3 class="ui dividing header">Weaknesses</h3>
             <div class="ui bulleted list">
                 <div class="item">
                     <div class="header">Very large file size</div>
@@ -110,12 +110,12 @@
                 <div class="item"></div>
             </div>
 
-            <h2 class="ui header">Developers that use Semantic UI</h2>
+            <h3 class="ui dividing header">Developers that use Semantic UI</h3>
             <div class="ui bulleted list">
                 <p>Developers who want a full-fledged, tightly-coupled framework, are willing to do some more learning,
                     and who do not like using bootstrap.</p>
             </div>
-            <h2 class="ui header">Websites that use Semantic UI</h2>
+            <h3 class="ui dividing header">Websites that use Semantic UI</h3>
             <div class="ui bulleted list">
                 <div class="item">
                     <div class="content">
@@ -124,14 +124,14 @@
                 </div>
             </div>
 
-            <h2 class="ui header">Flask</h2>
+            <h2 class="ui block header">Flask</h2>
             <p>Flask is a micro framework. The aim of the framework is to keep the core simple but extensible. Flask is
                 easy to learn quickly, and is also easy to tweak to the developers needs.</p>
 
-            <h2 class="ui header">Popularity</h2>
+            <h3 class="ui dividing header">Popularity</h3>
             <p>Flask is very popular currently, even more so than Django which is another python framework.</p>
 
-            <h2 class="ui header">Strengths</h2>
+            <h3 class="ui dividing header">Strengths</h3>
             <div class="ui bulleted list">
                 <div class="item">
                     <div class="content">
@@ -160,7 +160,7 @@
                 </div>
             </div>
 
-            <h2 class="ui header">Weaknesses</h2>
+            <h3 class="ui dividing header">Weaknesses</h3>
             <div class="ui bulleted list">
                 <div class="item">
                     <div class="header">Not Async friendly</div>
@@ -175,13 +175,14 @@
                     <div class="header">Truely limited in features</div>
                 </div>
             </div>
+
+            <h3 class="ui dividing header">Types of Developers</h3>
+            <p>Flask is often used in smaller projects that have opted to use python.</p>
+
+            <h3 class="ui dividing header">Types of Websites</h3>
+            <p>http://flask.pocoo.org/community/poweredby/</p>
+
         </div>
-
-        <h2 class="ui header">Types of Developers</h2>
-        <p>Flask is often used in smaller projects that have opted to use python.</p>
-
-        <h2 class="ui header">Types of Websites</h2>
-        <p>http://flask.pocoo.org/community/poweredby/</p>
     </div>
 </body>
 
