Updated the 'Credits' page with roles

--- a/templates/CreditsPage.html
+++ b/templates/CreditsPage.html
@@ -46,26 +46,20 @@
             <div class="ui bulleted list">
                 <div class="item">
                     <div class="content">
-                        <div class="header">Travis Raviyendran</div>
-                        <p>Responsibilities: </p>
-                    </div>
-                </div>
-                <div class="item">
-                    <div class="content">
                         <div class="header">Bradley Phati</div>
-                        <p>Responsibilities: </p>
+                        <p>Responsibilities: Webpage Development, Semantic UI Research and Implementation, CSS Styling</p>
                     </div>
                 </div>
                 <div class="item">
                     <div class="content">
                         <div class="header">Muhammad Siddiqui</div>
-                        <p>Responsibilities:</p>
+                        <p>Responsibilities: Webpage Development, Flask Implementation, Hosting Research and Implementation</p>
                     </div>
                 </div>
                 <div class="item">
                     <div class="content">
                         <div class="header">Lauren Gomes</div>
-                        <p> Responsibilities: </p>
+                        <p> Responsibilities: Webpage Development, Semantic UI Implementation, Research and Writing of Webpage Content</p>
                     </div>
                 </div>
             </div>
