Updated the conclusion page
Added the necessary writing for the conclusion, please make sure to add stuff about installing stuff on the host once that is completed.

--- a/templates/conclusion.html
+++ b/templates/conclusion.html
@@ -47,37 +47,53 @@
                 <div class="item">
                     <div class="content">
                         <div class="header">How did Flask and Semantic UI perform?</div>
-                        <p> </p>
+                        <p> Semantic UI was quite easy to pick up and use. It was similar to bootstrap, so 
+                            our previous experince with that framework was useful. </p>
                     </div>
                 </div>
                 <div class="item">
                     <div class="content">
                         <div class="header">How was installation and configuration?</div>
-                        <p> </p>
+                        <p> Installation was notably easier on computers using linux than those using
+                            windows. Linux only required a few commands to get Flask and Semantic UI working,
+                            while the process for windows involved external installers, and literal hours of 
+                            research and fiddling in order to just get the most basic elements of the frameworks
+                            working.</p>
+                        <!--PLEASE ADD SOMETHING FOR INSTALLATION ON THE HOST-->
                     </div>
                 </div>
                 <div class="item">
                     <div class="content">
                         <div class="header">How easy was is to create a page?</div>
-                        <p></p>
+                        <p>Creating a page using Semantic UI was very easy. However, the structure was similar to bootstrap, 
+                            as mentioned above, which might make how easy it was a bit biased. Flask was a bit harder to get
+                            a hang of using within a webpage than some other server-side frameworks, such as PHP.</p>
                     </div>
                 </div>
                 <div class="item">
                     <div class="content">
                         <div class="header">How was the learning curve?</div>
-                        <p></p>
+                        <p> Semantic Ui was easy to pick up, which was quite surprising. When researching what types of
+                         developers use Semantic UI, many people mentioned that it was harder to pick up than most other
+                         front-end frameworks. We didn't find that to be the case. Flask was often mentioned as being easier
+                         to learn than Django, another python based framework, but we found it to be harder to grasp than 
+                         most other frameworks we explored within this course.</p>
                     </div>
                 </div>
                 <div class="item">
                         <div class="content">
                             <div class="header">How would we have done things differently?</div>
-                            <p></p>
+                            <p>Using more computers with linux as the operating system would have made the installation
+                            of our frameworks much quicker and easier. Starting off with frustrations about such
+                             a small, basic thing definitely brought a bit of pessimism into the project. </p>
                         </div>
                     </div>
                     <div class="item">
                     <div class="content">
                         <div class="header">Regrets on the frameworks of choice?</div>
-                        <p></p>
+                        <p>Semantic UI worked well, and it was quick to pick up. Perhaps a different server-side framework
+                           that was more familiar would have been a better choice. We wanted to try something new to expand
+                         our skills in web development, but perhaps this wasn't the place to jump directly into the deep end.</p>
                     </div>
                 </div>
             </div>
