--- a/templates/CreditsPage.html
+++ b/templates/CreditsPage.html
@@ -64,7 +64,19 @@
                 </div>
             </div>
         </div>
-
+        <div class="ui container segment">
+                <h2 class="ui header">References</h2>
+                <div>
+                    <p>
+                    <a class="item" href="https://res.cloudinary.com/simpleview/image/upload/c_fit,w_1000,h_1000/crm/toronto/Summer-2015-Skyline0_5e954389-5056-a36f-234589b46e9b25ae.jpg">CN Tower Image</a><br/>
+                    <a class="item" href="https://pbs.twimg.com/media/DQecaREVwAAewMe.jpg">Ontario Place Image</a><br/>
+                    <a class="item" href="https://cdn-cloudfront.cfauthx.com/binaries/content/gallery/cw-en-ca/blogs/last-blast-banner.png">Canada's Wonderland Image</a><br/>
+                    <a class="item" href="https://tce-live2.s3.amazonaws.com/media/media/6086645c-c9df-4fb9-9bee-a042fd87d75c.jpg">ROM Image</a><br/>
+                    <a class="item" href="http://urbantoronto.ca/sites/default/files/imagecache/display-slideshow/images/articles/2015/10/17734/17734-59272.png">AGO Image</a><br/>
+                    <a class="item" href="https://s3.amazonaws.com/btoimage/prism-thumbnails/articles/2017411-kensingtonflea.jpg-resize_then_crop-_frame_bg_color_FFF-h_1365-gravity_center-q_70-preserve_ratio_true-w_2048_.webp">Kensington Market Image</a><br/>
+                    </p>
+                </div>
+        </div>
 
     </div>
 </body>
