need a a custom css file added

--- a/templates/home.html
+++ b/templates/home.html
@@ -15,36 +15,33 @@
 </head>
 
 <body>
-    <div class="ui container">
-        <!--Header-->
-        <h1 class="ui header">Main Title</h1>
-
-        <!--Menu-->
-        <div class="ui attached stackable menu">
-            <div class="ui container">
-                <a class="item">
-                    <i class="home icon"></i> Home
-                </a>
-                <a class="item">
-                    <i class="grid layout icon"></i> Browse
-                </a>
-                <a class="item">
-                    <i class="mail icon"></i> Messages
-                </a>
-            </div>
-            <div class="ui simple dropdown item">
-                More
-                <i class="dropdown icon"></i>
-                <div class="menu">
-                    <a class="item"><i class="edit icon"></i>Edit Profile</a>
-                    <a class="item"><i class="globe icon"></i>Choose Language</a>
-                    <a class="item"><i class="settings icon"></i>Account Settings</a>
-                </div>
-            </div>
+     <!--Menu-->
+     <div class="ui top fixed menu">
+        <div class="ui container">
+            <a class="item">
+                <i class="home icon"></i> Home
+            </a>
+            <a class="item">
+                <i class="grid layout icon"></i> Browse
+            </a>
+            <a class="item">
+                <i class="mail icon"></i> Messages
+            </a>
         </div>
+    </div>
+    
+    
+    <!--Title-->
+    <div class="ui container">
+        
+        <h1 class="ui header">Main Title</h1>
+    </div>
 
+
+    <div class="ui grid container">
+        
         <!--Summary-->
-        <div class="ui container segment">
+        <div class="ui container">
             <h2 class="ui block header">Semantic UI</h2>
             <p>Semantic is a development framework that helps create beautiful, responsive layouts using human-friendly
                 HTML</p>
