added href for pages

--- a/templates/home.html
+++ b/templates/home.html
@@ -17,27 +17,27 @@
 <body>
     <!--Menu bar-->
     <div class="ui inverted segment">
-      <div class="ui inverted secondary menu">
-
-        <a class="active item"> <!--FOR CURRENT PAGE-->
+        <div class="ui inverted secondary menu">
+            <a class="active item" href="home.html">
+                <!--FOR CURRENT PAGE-->
                 <i class="home icon"></i> Home
             </a>
-            <a class="item">
+            <a class="item" href="install.html">
                 <i class="download icon"></i> Install Frameworks
             </a>
-            <a class="item">
+            <a class="item" href="tutorial.html">
                 <i class="terminal icon"></i> Tutorial
             </a>
-            <a class="item">
+            <a class="item" href="demopage.html">
                 <i class="pencil alternate icon"></i> Demo
             </a>
-            <a class="item">
+            <a class="item" href="conclusion.html">
                 <i class="thumbs up outline icon"></i> Conclusion
             </a>
-            <a class="item">
+            <a class="item" href="creditspage.html">
                 <i class="user outline icon"></i> Credits
             </a>
-      </div>
+        </div>
     </div>
 
     <!--BODY CONTENTS-->
@@ -50,13 +50,13 @@
 
                     <div class="segment">
                         <h2 class="ui large header">Semantic UI</h2>
-                    <p>Semantic is a development framework that helps create beautiful, responsive layouts using
-                        human-friendly
-                        HTML</p>
+                        <p>Semantic is a development framework that helps create beautiful, responsive layouts using
+                            human-friendly
+                            HTML</p>
                     </div>
 
 
-                    
+
                     <h3 class="ui dividing header">Popularity</h3>
                     <p>Semantic UI is not as popular as Bootstrap, and has a larger learning curve.</p>
 
@@ -74,20 +74,23 @@
                                     time</p>
                             </div>
                         </div>
-                        <div class="item">The elements offer a huge amount of customization compared to other frameworks
+                        <div class="item">The elements offer a huge amount of customization compared to other
+                            frameworks
                             such
                             as Bootstrap</div>
                         <div class="item">
                             <div class="content">
                                 <div class="header">Its semantic</div>
-                                <p>It uses a semantic naming scheme for the styling, which makes it easy to understand for
+                                <p>It uses a semantic naming scheme for the styling, which makes it easy to understand
+                                    for
                                     beginners</p>
                             </div>
                         </div>
                         <div class="item">
                             <div class="content">
                                 <div class="header">Beautifully designed</div>
-                                <p>Semantic UI has a futuristic and beautiful design that many people will find appealing.</p>
+                                <p>Semantic UI has a futuristic and beautiful design that many people will find
+                                    appealing.</p>
                             </div>
                         </div>
                         <div class="item">
@@ -99,7 +102,8 @@
                         <div class="item">
                             <div class="content">
                                 <div class="header">Good documentation</div>
-                                <p>The documentation is well written and very easy to use due to the many examples provided
+                                <p>The documentation is well written and very easy to use due to the many examples
+                                    provided
                                     in
                                     the source code.</p>
                             </div>
