--- a/templates/home.html
+++ b/templates/home.html
@@ -18,23 +18,22 @@
     <!--Menu bar-->
     <div class="ui inverted segment">
         <div class="ui inverted secondary menu">
-            <a class="active item" href="home.html">
-                <!--FOR CURRENT PAGE-->
+            <a class="active item" href="home.html"><!--FOR CURRENT PAGE CHANGES WITH EACH PAGE!-->
                 <i class="home icon"></i> Home
             </a>
-            <a class="item" href="install.html">
+            <a class="item" href="{{ url_for('install') }}">
                 <i class="download icon"></i> Install Frameworks
             </a>
-            <a class="item" href="tutorial.html">
+            <a class="item" href="{{ url_for('tutorial') }}">
                 <i class="terminal icon"></i> Tutorial
             </a>
-            <a class="item" href="demopage.html">
+            <a class="item" href="{{ url_for('demo') }}">
                 <i class="pencil alternate icon"></i> Demo
             </a>
-            <a class="item" href="conclusion.html">
+            <a class="item" href="{{ url_for('conclusion') }}">
                 <i class="thumbs up outline icon"></i> Conclusion
             </a>
-            <a class="item" href="creditspage.html">
+            <a class="item" href="{{ url_for('credits') }}">
                 <i class="user outline icon"></i> Credits
             </a>
         </div>
@@ -51,15 +50,10 @@
                     <div class="segment">
                         <h2 class="ui large header">Semantic UI</h2>
                         <p>Semantic is a development framework that helps create beautiful, responsive layouts using
-                            human-friendly
-                            HTML</p>
-                    </div>
-
-
-
+                            human-friendly HTML</p>
+                    
                     <h3 class="ui dividing header">Popularity</h3>
                     <p>Semantic UI is not as popular as Bootstrap, and has a larger learning curve.</p>
-
 
                     <h3 class="ui dividing header">Strengths</h3>
                     <div class="ui bulleted list">
@@ -107,39 +101,26 @@
                                     in
                                     the source code.</p>
                             </div>
-                        </div>
-                    </div>
-                    <h3 class="ui dividing header">Weaknesses</h3>
-                    <div class="ui bulleted list">
-                        <div class="item">
-                            <div class="header">Very large file size</div>
-                            <p>The packages provided by Semantic UI are much larger in comparison to Boostrap. Using
-                                specific
-                                components is recommended rather than
-                                using all the components.</p>
-                        </div>
-                        <div class="item">
-                            <div class="content">
-                                <div class="header">Buggy</div>
-                                <p>There are many UI intricacies such as incorrect position and unable to mix classes.</p>
                             </div>
                         </div>
-                        <div class="item"></div>
-                    </div>
-                    <h3 class="ui dividing header">Developers that use Semantic UI</h3>
-                    <div class="ui bulleted list">
-                        <p>Developers who want a full-fledged, tightly-coupled framework, are willing to do some more
-                            learning,
-                            and who do not like using bootstrap.</p>
-                    </div>
-                    <h3 class="ui dividing header">Websites that use Semantic UI</h3>
-                    <div class="ui bulleted list">
-                        <div class="item">
-                            <div class="content">
-                                <p>https://stackshare.io/semantic-ui </p>
+                        <h3 class="ui dividing header">Weaknesses</h3>
+                        <div class="ui bulleted list">
+                            <div class="item">
+                                <div class="header">Very large file size</div>
+                                <p>The packages provided by Semantic UI are much larger in comparison to Boostrap. Using
+                                    specific
+                                    components is recommended rather than
+                                    using all the components.</p>
+                            </div>
+                            <div class="item">
+                                <div class="content">
+                                    <div class="header">Buggy</div>
+                                    <p>There are many UI intricacies such as incorrect position and unable to mix classes.</p>
+                                </div>
                             </div>
                         </div>
                     </div>
+                    
 
                 </div>
             </div>
@@ -207,12 +188,29 @@
                 </div>
             </div>
         </div>
-        <!--Summary-->
-        <div class="ui container">
-
-
-        </div>
     </div>
+    
+    <!--Summary-->
+    <div class="row">
+
+
+        <h3 class="ui dividing header">Developers that use Semantic UI</h3>
+        <div class="ui bulleted list">
+            <p>Developers who want a full-fledged, tightly-coupled framework, are willing to do some more
+                learning,
+                and who do not like using bootstrap.</p>
+        </div>
+        <h3 class="ui dividing header">Websites that use Semantic UI</h3>
+        <div class="ui bulleted list">
+            <div class="item">
+                <div class="content">
+                    <p>https://stackshare.io/semantic-ui </p>
+                </div>
+            </div>
+        </div>
+
+    </div>
+    
 
 
 
