minor changes to homepage

--- a/templates/home.html
+++ b/templates/home.html
@@ -142,30 +142,44 @@
                 </div>
 
                 <h3 class="ui dividing header">Types of Developers</h3>
-                <p>Flask is often used in smaller projects that have opted to use python.</p>
+                <p>Flask is often used in smaller projects that have opted to use python. Flask is also useful for small projects due to being lightweight and easy to deploy</p>
 
                 <h3 class="ui dividing header">Types of Websites</h3>
-                <p>http://flask.pocoo.org/community/poweredby/</p>
+                <div class="item"> 
+                <div class="content">
+                    <a href="http://flask.pocoo.org/community/poweredby/">Here are some websites using Flask</a>
+                </div>
+                </div>
             </div>
         </div>
     </div>
 </div>
 
-<!--Summary-->
-<div class="row">
+<!--Extra SemanticUI Info-->
+<div class="row" style="padding: 2.5em">
 
 
-    <h3 class="ui dividing header">Developers that use Semantic UI</h3>
-    <div class="ui bulleted list">
+    <h2 class="ui dividing header">Developers that use Semantic UI</h2>
+    <div class="ui bulleted list" style="padding-bottom: 1em">
         <p>Developers who want a full-fledged, tightly-coupled framework, are willing to do some more
             learning,
             and who do not like using bootstrap.</p>
     </div>
-    <h3 class="ui dividing header">Websites that use Semantic UI</h3>
-    <div class="ui bulleted list">
+    <h2 class="ui dividing header">Websites that use Semantic UI</h2>
+    <div class="ui bulleted list" style="padding-bottom: 2em">
+        <div class="item">
+            <div class="content">                
+                <a href="https://www.snapchat.com/">SnapChat</a>
+            </div>
+        </div>
         <div class="item">
             <div class="content">
-                <p>https://stackshare.io/semantic-ui </p>
+                <a href="https://reviewable.io/">Reviewable.io</a>
+            </div>
+        </div>
+        <div class="item"> 
+            <div class="content">
+                <a href="https://stackshare.io/semantic-ui">Here is a list of popular companies using SemanticUI </a>
             </div>
         </div>
     </div>
