fixed random title at top

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" type="text/css" media="screen" href="{{ url_for('static', filename='semantic/dist/semantic.css') }}" />
     <link rel="stylesheet" type="text/css" media="screen" href="{{ url_for('static', filename='demopage.css') }}" />
     <script src="{{ url_for('static', filename='semantic/dist/semantic.js') }}"></script>
-</head>  <h1 class="ui header">Five of Toronto's Best Attractions</h1>
+</head>
     
 
 <body>
