--- a/templates/conclusion.html
+++ b/templates/conclusion.html
@@ -1,69 +1,51 @@
 {% extends "layout.html" %}
 {% block content%}
-    <div class="ui container">
-        <!--Header-->
-        <h1 class="ui header">Conclusion</h1>
-
+    <div class="ui stretched one column grid" style="padding: 2.5em">
+        <h1 class="ui huge header">Conclusion</h1>
+        <div class="row">
         <!--Summary-->
-        <div class="ui container segment">
-
-            <h2 class="ui header">Our Conclusions</h2>
+        <div class="ui raised segment">
+            
             <div class="ui bulleted list">
-                <div class="item">
-                    <div class="content">
-                        <div class="header">How did Flask and Semantic UI perform?</div>
-                        <p> Semantic UI was quite easy to pick up and use. It was similar to bootstrap, so 
-                            our previous experince with that framework was useful. </p>
-                    </div>
-                </div>
-                <div class="item">
-                    <div class="content">
-                        <div class="header">How was installation and configuration?</div>
-                        <p> Installation was notably easier on computers using linux than those using
-                            windows. Linux only required a few commands to get Flask and Semantic UI working,
-                            while the process for windows involved external installers, and literal hours of 
-                            research and fiddling in order to just get the most basic elements of the frameworks
-                            working.</p>
-                        <!--PLEASE ADD SOMETHING FOR INSTALLATION ON THE HOST-->
-                    </div>
-                </div>
-                <div class="item">
-                    <div class="content">
-                        <div class="header">How easy was is to create a page?</div>
-                        <p>Creating a page using Semantic UI was very easy. However, the structure was similar to bootstrap, 
-                            as mentioned above, which might make how easy it was a bit biased. Flask was a bit harder to get
-                            a hang of using within a webpage than some other server-side frameworks, such as PHP.</p>
-                    </div>
-                </div>
-                <div class="item">
-                    <div class="content">
-                        <div class="header">How was the learning curve?</div>
-                        <p> Semantic Ui was easy to pick up, which was quite surprising. When researching what types of
-                         developers use Semantic UI, many people mentioned that it was harder to pick up than most other
-                         front-end frameworks. We didn't find that to be the case. Flask was often mentioned as being easier
-                         to learn than Django, another python based framework, but we found it to be harder to grasp than 
-                         most other frameworks we explored within this course.</p>
-                    </div>
-                </div>
-                <div class="item">
-                        <div class="content">
-                            <div class="header">How would we have done things differently?</div>
-                            <p>Using more computers with linux as the operating system would have made the installation
-                            of our frameworks much quicker and easier. Starting off with frustrations about such
-                             a small, basic thing definitely brought a bit of pessimism into the project. </p>
-                        </div>
-                    </div>
-                    <div class="item">
-                    <div class="content">
-                        <div class="header">Regrets on the frameworks of choice?</div>
-                        <p>Semantic UI worked well, and it was quick to pick up. Perhaps a different server-side framework
-                           that was more familiar would have been a better choice. We wanted to try something new to expand
-                         our skills in web development, but perhaps this wasn't the place to jump directly into the deep end.</p>
-                    </div>
-                </div>
+                <h3 class="ui header">How did Flask and Semantic UI perform?</h3>
+                <p> Semantic UI was quite easy to pick up and use. It was similar to bootstrap, so 
+                    our previous experince with that framework was useful. </p>
+                <p>Flask was not too difficult to install. It performs as advertised: very easy to set up and get running for lightweight projects such as this one</p>
+                    
+                
+                <h3 class="ui header">How was installation and configuration?</h3>
+                <p> Installation was notably easier on computers using linux than those using
+                    windows. Linux only required a few commands to get Flask and Semantic UI working,
+                    while the process for windows involved external installers, and literal hours of 
+                    research and fiddling in order to just get the most basic elements of the frameworks
+                    working.</p>
+                    <p>Installing and Configuring on the host was slightly difficult and very specific, there were some gaps on how to deploy Flask onto Heroku, so Youtube and official documentation were both consulted to get a better understanding</p>
+
+                <h3 class="ui header">How easy was is to create a page?</h3>
+                <p>Creating a page using Semantic UI was very easy. However, the structure was similar to bootstrap, 
+                    as mentioned above, which might make how easy it was a bit biased. Flask was a bit harder to get
+                    a hang of using with a webpage than some other server-side frameworks, such as PHP which is easy to keep inside your html pages, whereas Flask must run the html pages in its own main Python file using different routes. This sounds complicated at first, but like most softwares, you can get used to it, plus, it is meant to be easier than some other back-end frameworks, such as Django</p>
+            
+                
+                <h3 class="ui header">How was the learning curve?</h3>
+                <p> Semantic Ui was easy to pick up, which was quite surprising. When researching what types of
+                 developers use Semantic UI, many people mentioned that it was harder to pick up than most other
+                 front-end frameworks. We didn't find that to be the case. Flask was often mentioned as being easier
+                 to learn than Django, another python based framework, but we found it to be harder to grasp than 
+                 most other frameworks we explored within this course. That may be also because no one in the team is familiar enough to code comfortably in Python</p>
+                
+                <h3 class="ui header">How would you have done things differently?</h3>
+                <p>Using more computers with linux as the operating system would have made the installation
+                of our frameworks much quicker and easier. Starting off with frustrations about such
+                 a small, basic thing definitely brought a bit of pessimism into the project. </p>
+                    
+                <h3 class="ui header">Regrets on the frameworks of choice?</h3>
+                <p>Semantic UI worked well, and it was quick to pick up. Perhaps a different server-side framework
+                   that was more familiar would have been a better choice, such as Perl, or PHP. We wanted to try something new to expand our skills in web development, but perhaps more practice was needed to get familiar with the full capabilities of the Flask framework before using it as the chosen back-end for this project</p>
+                    
             </div>
         </div>
-
+    </div>
 
     </div>
 {% endblock content %}
